--- a/src/products/analytics/package.json
+++ b/src/products/analytics/package.json
@@ -12,7 +12,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.0.0",
+    "next": "^15.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.0",
@@ -35,7 +35,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "eslint": "8.54.0",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "^15.3.4"
   },
   "keywords": [
     "analytics",
