--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.0.18",
     "@medusajs/cache-redis": "^1.9.2",
-    "@medusajs/framework": "^2.8.7",
+    "@medusajs/framework": "^0.0.1",
     "@medusajs/icons": "^2.8.7",
     "@medusajs/js-sdk": "^2.8.4",
     "@medusajs/medusa": "^2.8.7",
@@ -96,6 +96,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "critters": "^0.0.23",
+    "esbuild": "^0.25.8",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.15.0",
@@ -107,9 +108,11 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "mongodb": "^6.17.0",
+    "multer": "^2.0.2",
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
     "node-fetch": "^2.7.0",
+    "on-headers": "^1.1.0",
     "pdfjs-dist": "^5.3.31",
     "pg": "^8.16.0",
     "react": "^18.3.1",
@@ -133,7 +136,6 @@
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "validator": "^13.15.15",
-    "xlsx": "^0.18.5",
     "zod": "^3.22.4",
     "zustand": "^5.0.4"
   },
@@ -199,6 +201,10 @@
     "@swc/core": "1.5.7",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
-    "@mikro-orm/postgresql": "6.4.3"
+    "@mikro-orm/postgresql": "6.4.3",
+    "multer": "^2.0.2",
+    "axios": "^1.10.0",
+    "esbuild": "^0.25.8",
+    "on-headers": "^1.1.0"
   }
 }
